[package]
name = "axum-sqlite"
authors = ["Knarkzel <knarkzel@gmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/knarkzel/axum-sqlite"
description = "Sqlite database for axum"
documentation = "https://docs.rs/axum-sqlite/"

[dependencies]
axum = { version = "~0.5", default-features = false }
r2d2 = { version = "~0.8", default-features = false }
r2d2_sqlite = { version = "~0.20", default-features = false }

[dev-dependencies]
axum = "0.5"   
tokio = { version = "1.0", features = ["full"] }
